<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text"
            />
        <EditText
            android:id="@+id/paste_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/paste_text_hint"
            android:isScrollContainer="true"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            />
        <Spinner
            android:id="@+id/paste_language"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/paste_language_hint"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            />
        <EditText
            android:id="@+id/paste_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/paste_user_hint"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            />
        <EditText
            android:id="@+id/paste_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/paste_password_hint"
            android:password="true"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/paste_private"
            />
        <CheckBox
            android:id="@+id/paste_private"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/paste_private_hint"
            />
    </LinearLayout>
</ScrollView>
